# atomspace-bridge

./: CMakeLists.txt  README.md
examples/: README.md  basic-demo.scm  bringup-demo.scm  table-browser.scm
lib/: AtomSpaceAutoMapConfig.cmake.in  CMakeLists.txt
opencog/: CMakeLists.txt
opencog/persist/: CMakeLists.txt
opencog/persist/automap/: CMakeLists.txt  ForeignPG.cc  ForeignPersistSCM.cc  ForeignPersistSCM.h  ForeignStorage.cc  ForeignStorage.h  SQLReader.cc  SQLResponse.h  ll-pg-cxx.cc  ll-pg-cxx.h  llapi.cc  notes
opencog/persist/bridge/: BridgePersistSCM.cc  BridgePersistSCM.h  BridgeStorage.cc  BridgeStorage.h  CMakeLists.txt  SQLReader.cc  SQLResponse.h  ll-pg-cxx.cc  ll-pg-cxx.h  llapi.cc  notes
opencog/persist/bridge-types/: CMakeLists.txt  atom_types.script  atom_types_init.cc
opencog/scm/: persist-bridge.scm  persist-foreign.scm
tests/: CMakeLists.txt
tests/persist/: CMakeLists.txt
tests/persist/automap/: CMakeLists.txt
tests/persist/bridge/: CMakeLists.txt
